# mcpbar

./: .coveragerc  .gitignore  AUTHORS.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: conf.py  index.md
src/mcpbar/: __main__.py  base.py  client.py  funcs.py  loader.py
src/mcpbar/provider/: ali_bailian_chat_provider.py  ali_bailian_tts_provider.py  anthropic_ai_provider.py  deepseek_ai_provider.py  openai_provider.py
src/mcpbar/schema/: ai_schema.py  extern_schema.py  server_schema.py
src/mcpbar/schema/ali_bailian/: chat.py  tts.py
src/mcpbar/schema/anthropic/: __init__.py
src/mcpbar/schema/deepseek/: __init__.py
src/mcpbar/schema/openai/: __init__.py
src/mcpbar/server/: local_runnable_js_server.py  local_runnable_py_server.py  server_transports.py
src/mcpbar/utils/: states.py
tests/: conftest.py
